// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsaBanner applies Spanish translation 1`] = `
<section
  aria-label="Sitio web oficial del gobierno"
  className="ds-c-usa-banner"
  lang="es"
>
  <header
    className="ds-c-usa-banner__header "
  >
    <p
      className="ds-c-usa-banner__header-text"
    >
      <svg
        aria-hidden={false}
        aria-labelledby="icon-7__title"
        className="ds-c-icon ds-c-icon--usa-flag ds-c-usa-banner__header-flag"
        focusable={false}
        id="icon-7"
        role="img"
        viewBox="0 0 16 11"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="icon-7__title"
        >
          Bandera
        </title>
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0h16v11H0z"
            fill="#FFF"
          />
          <path
            d="M8 0h8v1H8z"
            fill="#DB3E1F"
          />
          <path
            d="M0 0h8v7H0z"
            fill="#1E33B1"
          />
          <path
            d="M8 2h8v1H8zM8 4h8v1H8zM8 6h8v1H8zM0 8h16v1H0zM0 10h16v1H0z"
            fill="#DB3E1F"
          />
          <path
            d="M1 1h1v1H1zM2 3h1v1H2zM1 5h1v1H1zM3 1h1v1H3zM4 3h1v1H4zM3 5h1v1H3zM5 1h1v1H5zM6 3h1v1H6zM5 5h1v1H5z"
            fill="#FFF"
          />
        </g>
      </svg>
    </p>
    <p
      className="ds-c-usa-banner__header-text"
    >
      <span>
        Un sitio oficial del Gobierno de Estados Unidos
      </span>
      <span
        aria-hidden={true}
        className="ds-c-usa-banner__header-action"
      >
        Así es como usted puede verificarlo
      </span>
      <button
        aria-controls="gov-banner_6"
        aria-expanded={false}
        className="ds-c-usa-banner__button"
        onClick={[Function]}
      >
        <span
          className="ds-c-usa-banner__button-text"
        >
          Así es como usted puede verificarlo
        </span>
      </button>
    </p>
  </header>
  <div
    className="ds-c-usa-banner__content"
    hidden={true}
    id="gov-banner_6"
  >
    <div
      className="ds-c-usa-banner__guidance-container"
    >
      <div
        className="ds-c-usa-banner__guidance"
      >
        <svg
          aria-hidden={true}
          aria-labelledby="icon-8__title"
          className="ds-c-icon ds-c-icon--building-circle ds-c-usa-banner__icon ds-c-icon-color--primary"
          focusable={false}
          id="icon-8"
          role="img"
          viewBox="0 0 54 54"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="icon-8__title"
          >
            Building in circle
          </title>
          <g>
            <path
              className="ds-c-icon--building-circle__building"
              d="M36.5,20.91v1.36H35.15a0.71,0.71,0,0,1-.73.68H18.23a0.71,0.71,0,0,1-.73-0.68H16.14V20.91l10.18-4.07Zm0,13.57v1.36H16.14V34.48a0.71,0.71,0,0,1,.73-0.68h18.9A0.71,0.71,0,0,1,36.5,34.48ZM21.57,23.62v8.14h1.36V23.62h2.71v8.14H27V23.62h2.71v8.14h1.36V23.62h2.71v8.14h0.63a0.71,0.71,0,0,1,.73.68v0.68H17.5V32.45a0.71,0.71,0,0,1,.73-0.68h0.63V23.62h2.71Z"
              fill="currentColor"
            />
            <circle
              className="ds-c-icon--building-circle__circle"
              cx="50%"
              cy="50%"
              fill="none"
              r="47%"
              stroke="currentColor"
              strokeWidth="2"
            />
          </g>
        </svg>
        <p
          className="ds-c-usa-banner__media-body"
        >
          <strong>
            Los sitios web oficiales usan .gov
          </strong>
          <br />
          Un sitio web
          <strong>
             
            .gov
             
          </strong>
          pertenece a una organización oficial del Gobierno de Estados Unidos.
        </p>
      </div>
      <div
        className="ds-c-usa-banner__guidance"
      >
        <svg
          aria-hidden={true}
          aria-labelledby="icon-9__title"
          className="ds-c-icon ds-c-icon--lock-circle ds-c-usa-banner__icon"
          focusable={false}
          id="icon-9"
          role="img"
          viewBox="0 0 54 54"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="icon-9__title"
          >
            Lock in circle
          </title>
          <path
            d="M34.72,34.84a1.29,1.29,0,0,1-1.29,1.29H20.57a1.29,1.29,0,0,1-1.29-1.29V27.12a1.29,1.29,0,0,1,1.29-1.29H21V23.26a6,6,0,0,1,12,0v2.57h0.43a1.29,1.29,0,0,1,1.29,1.29v7.72Zm-4.29-9V23.26a3.43,3.43,0,0,0-6.86,0v2.57h6.86Z"
            fill="currentColor"
          />
          <circle
            cx="50%"
            cy="50%"
            fill="none"
            r="47%"
            stroke="currentColor"
            strokeWidth="2px"
          />
        </svg>
        <p
          className="ds-c-usa-banner__media-body"
        >
          <strong>
            Los sitios web seguros .gov usan HTTPS
          </strong>
          <br />
          Un
          <strong>
             
            candado
             
          </strong>
           (
           
          <svg
            aria-hidden={false}
            aria-labelledby="icon-10__title"
            className="ds-c-icon ds-c-icon--lock ds-c-usa-banner__lock-image"
            focusable={false}
            id="icon-10"
            role="img"
            viewBox="0 0 52 64"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title
              id="icon-10__title"
            >
              candado
            </title>
            <path
              d="M26 0c10.493 0 19 8.507 19 19v9h3a4 4 0 0 1 4 4v28a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V32a4 4 0 0 1 4-4h3v-9C7 8.507 15.507 0 26 0zm0 8c-5.979 0-10.843 4.77-10.996 10.712L15 19v9h22v-9c0-6.075-4.925-11-11-11z"
              fillRule="evenodd"
            />
          </svg>
           
          ) 
          o
          <strong>
             
            https://
             
          </strong>
          significa que usted se conectó de forma segura a un sitio web .gov. Comparta información sensible sólo en sitios web oficiales y seguros.
        </p>
      </div>
    </div>
  </div>
</section>
`;

exports[`UsaBanner applies additional class names to expanded banner 1`] = `
<section
  aria-label="Official government website"
  className="ds-c-usa-banner"
  lang={null}
>
  <header
    className="ds-c-usa-banner__header ds-c-usa-banner__header--expanded"
  >
    <p
      className="ds-c-usa-banner__header-text"
    >
      <UsaFlagIcon
        className="ds-c-usa-banner__header-flag"
        title="U.S. Flag"
        viewBox="0 0 16 11"
      />
    </p>
    <p
      className="ds-c-usa-banner__header-text"
    >
      <span>
        An official website of the United States government
      </span>
      <span
        aria-hidden={true}
        className="ds-c-usa-banner__header-action"
      >
        Here’s how you know
      </span>
      <button
        aria-controls="gov-banner_11"
        aria-expanded={true}
        className="ds-c-usa-banner__button"
        onClick={[Function]}
      >
        <span
          className="ds-c-usa-banner__button-text"
        >
          Here’s how you know
        </span>
      </button>
    </p>
  </header>
  <div
    className="ds-c-usa-banner__content"
    hidden={false}
    id="gov-banner_11"
  >
    <div
      className="ds-c-usa-banner__guidance-container"
    >
      <div
        className="ds-c-usa-banner__guidance"
      >
        <BuildingCircleIcon
          ariaHidden={true}
          className="ds-c-usa-banner__icon ds-c-icon-color--primary"
          title="Building in circle"
          viewBox="0 0 54 54"
        />
        <p
          className="ds-c-usa-banner__media-body"
        >
          <strong>
            Official websites use .gov
          </strong>
          <br />
          A
          <strong>
             
            .gov
             
          </strong>
          website belongs to an official government organization in the United States.
        </p>
      </div>
      <div
        className="ds-c-usa-banner__guidance"
      >
        <LockCircleIcon
          ariaHidden={true}
          className="ds-c-usa-banner__icon"
          title="Lock in circle"
          viewBox="0 0 54 54"
        />
        <p
          className="ds-c-usa-banner__media-body"
        >
          <strong>
            Secure .gov websites use HTTPS
          </strong>
          <br />
          A
          <strong>
             
            lock
             
          </strong>
           (
           
          <LockIcon
            className="ds-c-usa-banner__lock-image"
            title="lock"
            viewBox="0 0 52 64"
          />
           
          ) 
          or
          <strong>
             
            https://
             
          </strong>
          means you’ve safely connected to the .gov website. Share sensitive information only on official, secure websites. 
        </p>
      </div>
    </div>
  </div>
</section>
`;

exports[`UsaBanner renders correctly 1`] = `
<section
  aria-label="Official government website"
  className="ds-c-usa-banner"
  lang={null}
>
  <header
    className="ds-c-usa-banner__header "
  >
    <p
      className="ds-c-usa-banner__header-text"
    >
      <svg
        aria-hidden={false}
        aria-labelledby="icon-2__title"
        className="ds-c-icon ds-c-icon--usa-flag ds-c-usa-banner__header-flag"
        focusable={false}
        id="icon-2"
        role="img"
        viewBox="0 0 16 11"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="icon-2__title"
        >
          U.S. Flag
        </title>
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0h16v11H0z"
            fill="#FFF"
          />
          <path
            d="M8 0h8v1H8z"
            fill="#DB3E1F"
          />
          <path
            d="M0 0h8v7H0z"
            fill="#1E33B1"
          />
          <path
            d="M8 2h8v1H8zM8 4h8v1H8zM8 6h8v1H8zM0 8h16v1H0zM0 10h16v1H0z"
            fill="#DB3E1F"
          />
          <path
            d="M1 1h1v1H1zM2 3h1v1H2zM1 5h1v1H1zM3 1h1v1H3zM4 3h1v1H4zM3 5h1v1H3zM5 1h1v1H5zM6 3h1v1H6zM5 5h1v1H5z"
            fill="#FFF"
          />
        </g>
      </svg>
    </p>
    <p
      className="ds-c-usa-banner__header-text"
    >
      <span>
        An official website of the United States government
      </span>
      <span
        aria-hidden={true}
        className="ds-c-usa-banner__header-action"
      >
        Here’s how you know
      </span>
      <button
        aria-controls="gov-banner_1"
        aria-expanded={false}
        className="ds-c-usa-banner__button"
        onClick={[Function]}
      >
        <span
          className="ds-c-usa-banner__button-text"
        >
          Here’s how you know
        </span>
      </button>
    </p>
  </header>
  <div
    className="ds-c-usa-banner__content"
    hidden={true}
    id="gov-banner_1"
  >
    <div
      className="ds-c-usa-banner__guidance-container"
    >
      <div
        className="ds-c-usa-banner__guidance"
      >
        <svg
          aria-hidden={true}
          aria-labelledby="icon-3__title"
          className="ds-c-icon ds-c-icon--building-circle ds-c-usa-banner__icon ds-c-icon-color--primary"
          focusable={false}
          id="icon-3"
          role="img"
          viewBox="0 0 54 54"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="icon-3__title"
          >
            Building in circle
          </title>
          <g>
            <path
              className="ds-c-icon--building-circle__building"
              d="M36.5,20.91v1.36H35.15a0.71,0.71,0,0,1-.73.68H18.23a0.71,0.71,0,0,1-.73-0.68H16.14V20.91l10.18-4.07Zm0,13.57v1.36H16.14V34.48a0.71,0.71,0,0,1,.73-0.68h18.9A0.71,0.71,0,0,1,36.5,34.48ZM21.57,23.62v8.14h1.36V23.62h2.71v8.14H27V23.62h2.71v8.14h1.36V23.62h2.71v8.14h0.63a0.71,0.71,0,0,1,.73.68v0.68H17.5V32.45a0.71,0.71,0,0,1,.73-0.68h0.63V23.62h2.71Z"
              fill="currentColor"
            />
            <circle
              className="ds-c-icon--building-circle__circle"
              cx="50%"
              cy="50%"
              fill="none"
              r="47%"
              stroke="currentColor"
              strokeWidth="2"
            />
          </g>
        </svg>
        <p
          className="ds-c-usa-banner__media-body"
        >
          <strong>
            Official websites use .gov
          </strong>
          <br />
          A
          <strong>
             
            .gov
             
          </strong>
          website belongs to an official government organization in the United States.
        </p>
      </div>
      <div
        className="ds-c-usa-banner__guidance"
      >
        <svg
          aria-hidden={true}
          aria-labelledby="icon-4__title"
          className="ds-c-icon ds-c-icon--lock-circle ds-c-usa-banner__icon"
          focusable={false}
          id="icon-4"
          role="img"
          viewBox="0 0 54 54"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="icon-4__title"
          >
            Lock in circle
          </title>
          <path
            d="M34.72,34.84a1.29,1.29,0,0,1-1.29,1.29H20.57a1.29,1.29,0,0,1-1.29-1.29V27.12a1.29,1.29,0,0,1,1.29-1.29H21V23.26a6,6,0,0,1,12,0v2.57h0.43a1.29,1.29,0,0,1,1.29,1.29v7.72Zm-4.29-9V23.26a3.43,3.43,0,0,0-6.86,0v2.57h6.86Z"
            fill="currentColor"
          />
          <circle
            cx="50%"
            cy="50%"
            fill="none"
            r="47%"
            stroke="currentColor"
            strokeWidth="2px"
          />
        </svg>
        <p
          className="ds-c-usa-banner__media-body"
        >
          <strong>
            Secure .gov websites use HTTPS
          </strong>
          <br />
          A
          <strong>
             
            lock
             
          </strong>
           (
           
          <svg
            aria-hidden={false}
            aria-labelledby="icon-5__title"
            className="ds-c-icon ds-c-icon--lock ds-c-usa-banner__lock-image"
            focusable={false}
            id="icon-5"
            role="img"
            viewBox="0 0 52 64"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title
              id="icon-5__title"
            >
              lock
            </title>
            <path
              d="M26 0c10.493 0 19 8.507 19 19v9h3a4 4 0 0 1 4 4v28a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V32a4 4 0 0 1 4-4h3v-9C7 8.507 15.507 0 26 0zm0 8c-5.979 0-10.843 4.77-10.996 10.712L15 19v9h22v-9c0-6.075-4.925-11-11-11z"
              fillRule="evenodd"
            />
          </svg>
           
          ) 
          or
          <strong>
             
            https://
             
          </strong>
          means you’ve safely connected to the .gov website. Share sensitive information only on official, secure websites. 
        </p>
      </div>
    </div>
  </div>
</section>
`;
